Revision history for Pandoc-Elements

{{$NEXT}}

0.02  2014-10-26 10:34:37 CET
    - added Pandoc::Walker
    - new helper method: element

0.01  2014-10-23 21:34:25 CEST
    - initial release