@@ -1,4 +1,7 @@
 requires 'perl', '5.008005';
+requires 'JSON';
 
-test_requires 'Test::More', '0.96';
-test_requires 'JSON';
+on test => sub {
+    requires 'Test::More', '0.96';
+    requires 'Test::Output';
+};
