@@ -1,11 +1,12 @@
 use strict;
 use Test::More;
 use Pandoc::Elements qw(Emph Str attributes element);
+use JSON;
 
-is_deeply [ Emph 'hello' ], 
-          [ { t => 'Emph', c => 'hello' } ], 'Emph';
-is_deeply [ Emph 'hello', 'world' ], 
-          [ { t => 'Emph', c => 'hello' }, 'world' ], 'Emph';
+is_deeply [ Str 'hello' ], 
+          [ { t => 'Str', c => 'hello' } ], 'Emph';
+is_deeply [ Str 'hello', 'world' ], 
+          [ { t => 'Str', c => 'hello' }, 'world' ], 'Emph';
 is_deeply [ Emph Str 'hello' ], 
           [ { t => 'Emph', c => { t => 'Str', c => 'hello' } } ], 'Emph';
 
@@ -14,5 +15,8 @@ is_deeply element( Code => attributes {}, 'x' ),
 
 eval { element ( Foo => 'bar' ) }; ok $@, 'unknown element';
 eval { element ( Code => 'x' ) }; ok $@, 'wrong number of arguments';
+
+is_deeply decode_json(Str('今日は')->json), 
+    { t => 'Str', c => '今日は' }, 'method json';
 
 done_testing;
